--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,8 +14,15 @@
         .navbar-header
           %span.navbar-brand #{AppConfig.workshops_name}
         %p.navbar-text.navbar-right
-          Links should go here
+          -if user_signed_in?
+            =link_to 'Logout', destroy_user_session_path, method: :delete
+          -else
+            =link_to 'Sign up', new_user_registration_path
+            \|
+            =link_to 'Sign in', new_user_session_path
     .container-fluid
       .row
         .col-lg-12
+          - flash.each do |type, msg|
+            =msg
           = yield
