--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -11,7 +11,7 @@
     %tr
       %td= category.name
       %td= link_to 'Show', category
-      -if current_user.try(:admin)
+      -if current_user.try(:admin?)
         %td= link_to 'Edit', edit_category_path(category)
         %td= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
 
