--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -12,9 +12,12 @@
     %nav.navbar.navbar-default
       .container-fluid
         .navbar-header
-          %span.navbar-brand #{AppConfig.workshops_name}
+          %span.navbar-brand 
+            =link_to "#{AppConfig.workshops_name}", root_path
         %p.navbar-text.navbar-right
           -if user_signed_in?
+            ="Hello, #{current_user.firstname}"
+            \|
             =link_to 'Logout', destroy_user_session_path, method: :delete
           -else
             =link_to 'Sign up', new_user_registration_path
