--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,5 +1,3 @@
-%p#notice= notice
-%p#error= flash[:error]
 
 %p
   %b Title:
@@ -16,10 +14,11 @@
   = product.category.name
 
 %h3 Reviews
-= render 'reviews/form'
+-if user_signed_in?
+  = render 'reviews/form'
 
 = render reviews
-
-= link_to 'Edit', edit_category_product_path(category.id, product.id)
-\|
+-if current_user == product.user
+  = link_to 'Edit', edit_category_product_path(category.id, product.id)
+  \|
 = link_to 'Back', category_products_path, class: 'btn btn-primary'
