--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,1 +1,225 @@
 @import "bootstrap";
+
+/* Space out content a bit */
+body {
+  padding-bottom: 20px;
+  font-size: 10px;
+  background-color: #F7F7F7;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: #555;
+    margin-top: 5px;
+    text-shadow: none;
+    font-weight: 400;
+    font-family: "Open Sans",Arial,sans-serif;
+    /*text-transform: uppercase;*/
+    text-align: center;
+}
+
+a,
+a:hover,
+a:focus{
+	color: #72C02C;
+}
+
+.title{
+	color: #687074;
+}
+
+.header .navbar-nav > li > a {
+    color: #687074;
+    font-size: 15px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+
+
+
+/* Everything but the jumbotron gets side spacing for mobile first views */
+.header,
+.marketing,
+.footer {
+	padding-top: 20px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+/* Custom page header */
+.header {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #72C02C;
+}
+/* Make the masthead heading the same height as the navigation */
+.header h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 40px;
+}
+
+/* Custom page footer */
+.footer {
+  padding-top: 19px;
+  color: #777;
+  border-top: 1px solid #e5e5e5;
+}
+
+/* Customize container */
+@media (min-width: 768px) {
+  .container {
+    max-width: 730px;
+  }
+}
+.container-narrow > hr {
+  margin: 30px 0;
+}
+
+/* Main marketing message and sign up button */
+.jumbotron {
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+.jumbotron .btn {
+  padding: 14px 24px;
+  font-size: 21px;
+}
+
+/* Supporting marketing content */
+.marketing {
+  margin: 40px 0;
+}
+.marketing p + h4 {
+  margin-top: 28px;
+}
+
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+  /* Remove the padding we set earlier */
+  .header,
+  .marketing,
+  .footer {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  /* Space out the masthead */
+  .header {
+    margin-bottom: 30px;
+  }
+  /* Remove the bottom border on the jumbotron for visual effect */
+  .jumbotron {
+    border-bottom: 0;
+  }
+}
+
+
+.nav > li > a {
+    padding: 7px 25px;
+    color: #687074;
+}
+
+.nav-pills > li.active > a,
+.nav-pills > li.active > a:hover,
+.nav-pills > li.active > a:focus{
+	background-color: 	#72C02C;
+}
+
+
+
+.col-md-4{
+	text-align: center;
+	padding-bottom: 15px;	
+}
+
+.center{
+	text-align: center;
+}
+
+.left{
+	text-align: left;
+}
+
+.green{
+	color: #72C02C;
+}
+
+
+.grey{
+	font-style: italic;
+	color: grey;
+}
+
+.text-muted,
+.text-muted a{
+	text-align: left;
+	color: inherit;
+}
+
+.form-control:focus {
+  border-color: #72C02C;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(114, 192, 44, 0.6); 
+}
+
+
+
+/*
+html{
+	min-height: 100%;
+
+}
+
+
+body{
+	background-color: #EFEFEF;
+	font-family: "Slabo 27px",Arial,sans-serif;
+	font-weight: 200;
+	text-align: center;
+}
+
+a {
+    color: #000;
+}
+
+a:hover {
+	color: rgba(0, 0, 0, 0.6);
+    text-decoration: underline;
+}
+
+.center{
+	text-align: center;
+}
+
+.menu_cat{
+	visibility: hidden;
+	opacity: 0;
+    transition: opacity 3s linear 0s;
+}
+
+.navbar-default {
+    background-color: inherit;
+    border: none;
+}
+
+.category{
+	
+    height:25vw;
+    float:left;
+    transition: background-color 2s ease;
+}
+
+.category:hover > .menu_cat{
+	visibility: visible;
+	opacity: 1;
+	
+}
+
+.category:hover{
+	background-color: #FFF;
+	
+}
+
+.cat_name{
+  	text-align: center;
+	margin-top: 33%;
+}
+*/
