--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,21 +1,81 @@
-%h1 Listing categories
+.row.marketing
+	-if current_user.try(:admin?)
+		%p.center= link_to 'New Category', new_category_path
+	-categories.each do |category|
+		.col-md-4
+			%h4= category.name
+			%p
+				= link_to 'Show', category_products_path(category)
+				-if current_user.try(:admin?)
+					= link_to 'Edit', edit_category_path(category)
+					= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
 
-%table.table
-  %tr
-    %th Name
-    %th
-    %th
-    %th
+	
 
-  - categories.each do |category|
-    %tr
-      %td= category.name
-      %td= link_to 'Show', category
-      -if current_user.try(:admin?)
-        %td= link_to 'Edit', edit_category_path(category)
-        %td= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
 
-%br
 
-  -if current_user.try(:admin?)
-    = link_to 'New Category', new_category_path
+/   <div class="header clearfix">
+/     <nav>
+/       <ul class="nav nav-pills pull-right">
+/         <li role="presentation" class="active"><a href="#">Home</a></li>
+/         <li role="presentation"><a href="#">About</a></li>
+/         <li role="presentation"><a href="#">Contact</a></li>
+/       </ul>
+/     </nav>
+/     <h3 class="text-muted">Project name</h3>
+/   </div>
+
+/   <div class="jumbotron">
+/     <h1>Jumbotron heading</h1>
+/     <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+/     <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+/   </div>
+
+/   <div class="row marketing">
+/     <div class="col-lg-6">
+/       <h4>Subheading</h4>
+/       <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+/       <h4>Subheading</h4>
+/       <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+/       <h4>Subheading</h4>
+/       <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+/     </div>
+
+/     <div class="col-lg-6">
+/       <h4>Subheading</h4>
+/       <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+/       <h4>Subheading</h4>
+/       <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+/       <h4>Subheading</h4>
+/       <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+/     </div>
+/   </div>
+
+/   <footer class="footer">
+/     <p>&copy; Company 2014</p>
+/   </footer>
+
+/ </div>
+
+
+/ %h2.center Categories
+/ -if current_user.try(:admin?)
+/   %p.center= link_to 'New Category', new_category_path
+
+
+/ -categories.each do |category|
+/   .category.col-md-3
+/     %h2.cat_name=category.name.upcase
+/     .menu_cat.center
+/       =link_to 'Show', category_products_path(category)
+/       -if current_user.try(:admin?)
+/         = link_to 'Edit', edit_category_path(category)
+/         = link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
+
+/ %br
+
+
