--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,4 +1,4 @@
-%h2 Sign up
+%h2.center Sign up
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = f.error_notification
   .form-inputs
@@ -9,4 +9,4 @@
     = f.input :password_confirmation, required: true\
   .form-actions
     = f.button :submit, "Sign up"
-= render "devise/shared/links"
+
