--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,6 +69,7 @@ a:focus{
 @media (min-width: 768px) {
   .container {
     max-width: 730px;
+    background-color: #FFF;
   }
 }
 .container-narrow > hr {
