--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,15 +1,8 @@
 %h1= category.name
+%p.center= "Category created at: #{category.created_at}"
+%p.center= "Last updated at: #{category.updated_at}"
+%p.center= link_to "#{pluralize(category.products.count, 'product')} in this category.", category_products_path(category)
 
 
--category.products.each do |product|
-  = link_to product.title, category_product_path(category, product)
-  =product.category.name
 
--if user_signed_in?
-  %p
-    %h3 New product
-    = render 'products/form'
-  -if current_user.try(:admin?)
-    = link_to 'Edit', edit_category_path(category)
-    \|
 = link_to 'Back', categories_path
