--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [category, product] do |f|
+= simple_form_for [category, product] do |f|
   - if product.errors.any?
     #error_explanation
       %h2= "#{pluralize(product.errors.count, "error")} prohibited this product from being saved:"
@@ -7,13 +7,10 @@
           %li= msg
 
   .form-group
-    = f.label :title
-    = f.text_field :title, class: 'form-control'
+    = f.input :title, class: 'form-control'
   .form-group
-    = f.label :description
-    = f.text_area :description, class: 'form-control'
+    = f.input :description, class: 'form-control'
   .form-group
-    = f.label :price
-    = f.text_field :price, class: 'form-control'
+    = f.input :price, class: 'form-control'
 
   = f.submit 'Save', class: 'btn btn-default'
