--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -17,6 +17,8 @@
         %nav
           %ul.nav.nav-pills.pull-right
             -if user_signed_in?
+              %li
+                =link_to "Hello, #{current_user.firstname}", user_profile_path
               %li.active{:role => 'presentation'}
                 =link_to 'Logout', destroy_user_session_path, method: :delete
             -else
